k8s/apiGatewayService.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: k8s-playground
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: api-gateway
  type: ClusterIP
